# ark-pixel-font

./: .gitignore  CNAME  LICENSE-MIT  LICENSE-OFL  README.md  alphabet-10px-monospaced.html  alphabet-10px-proportional.html  alphabet-10px.html  alphabet-12px-monospaced.html  alphabet-12px-proportional.html  alphabet-12px.html  alphabet-16px-monospaced.html  alphabet-16px-proportional.html  alphabet-16px.html  build.py  demo-10px.html  demo-12px.html  demo-16px.html  index.html  playground.html  publish.py  pyproject.toml  requirements.txt
.github/: FUNDING.yaml  FUNDING.yml
assets/: cjk-radicals-supplement-mapping.yml  kangxi-radicals-mapping.yml
configs/: __init__.py  font_config.py  font_define.py  git_deploy_config.py  path_define.py  workspace_define.py
docs/: font-info-10px-monospaced.md  font-info-10px-proportional.md  font-info-10px.md  font-info-12px-monospaced.md  font-info-12px-proportional.md  font-info-12px.md  font-info-16px-monospaced.md  font-info-16px-proportional.md  font-info-16px.md  info-10px-monospaced.md  info-10px-proportional.md  info-12px-monospaced.md  info-12px-proportional.md  info-16px-monospaced.md  info-16px-proportional.md
services/: design_service.py  font_service.py  html_service.py  image_service.py  info_service.py  publish_service.py  template_service.py
tasks/: build_10px_woff2.py  build_12px_woff2.py  build_16px_woff2.py  build_woff2.py  deploy_www.py  format_glyph_files.py  make_html_files.py  make_image_files.py  update_docs.py
tools/: __init__.py  build.py  build_10px_woff2.py  build_12px_woff2.py  build_16px_woff2.py  (+22 more)
(+116 files in other folders)
