[project]
name = "ark-pixel-font"
version = "0.0.0"
requires-python = ">=3.14"

dependencies = [
    "pixel-font-builder==0.0.47",
    "pixel-font-knife==0.0.20",
    "unidata-blocks==0.0.23",
    "character-encoding-utils==0.0.11",
    "pyyaml==6.0.3",
    "pillow==12.0.0",
    "beautifulsoup4==4.14.3",
    "jinja2==3.1.6",
    "loguru==0.7.3",
    "cyclopts==4.4.1",
]
